--- a/src/page_complete.html
+++ b/src/page_complete.html
@@ -1,6 +1,7 @@
 <html>
-  <head><p>{{table}}번 테이블 주문 완료</p></head>
+  <head><title>주문 완료</title></head>
   <body>
+    <p><h2 class="main-title">{{table}}번 테이블 주문 완료</h2></p>
     <br><a href="/{{table}}">추가 주문하기</a><br><br><br>
     개발자 - 고려대학교 사회학과 23학번 엄상진<br>
     (contact : INSTAGRAM_ID @eomsj_214)
